# llmbanter

./: .env.template  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: python-poetry-app.yml
bots/: human.yaml
bots/expert/: python.yaml
bots/system/: _system_jailbreaker.yaml
bots_json/system/: _system_interrogator.yaml  _system_jailbreaker.yaml  _system_questioner.yaml
llmbanter/: console.py
llmbanter/banter/: bot_base.py  bot_pair.py  bot_types.py  conversation.py
llmbanter/bots/: assistant.yaml  bot_base.py  bot_pair.py  bot_types.py  conversation.py  human.yaml
llmbanter/bots/expert/: psychiatrist.yaml  shell.yaml
llmbanter/bots/famous/: cobain.yaml  einstein.yaml
llmvsllm/: console.py
llmvsllm/arena/: bot_base.py  bot_pair.py  conversation.py  fixed_response_bot.py  human_input_bot.py  llm_bot.py
llmvsllm/bots/: bot_base.py  bot_pair.py  bot_types.py  conversation.py  generic_llm_bots.py  system_bots.py
notebooks/: llmbanter_demo.ipynb
tests/: test_bot_base.py  test_console.py
